#004: Added translation to the app with next-translation

--- a/locales/en/profile.json
+++ b/locales/en/profile.json
@@ -1,1 +1,6 @@
-{}
+{
+  "followers_one" : "{{count}} follower",
+  "followers_other" : "{{count}} followers",
+  "following" : "{{count}} following",
+  "repositoriesTitle" : "Repositories"
+}
