--- a/locales/en/home.json
+++ b/locales/en/home.json
@@ -1,4 +1,5 @@
 {
   "title": "The Front",
-  "loginText": "Log in to your account"
+  "loginText": "Log in to your account",
+  "buttonText": "Sign in with github"
 }
